sample-app/k8s/overlays/oke/imagepullsecret-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: book-app
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ocir
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: book-app
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ocir
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: book-app
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ocir
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: book-app
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ocir
